HTML/CSS changes: mobile view, menu, page border
Mobile (responsive) view: page is now fully visible without scrolling
horizontally (not taking content elements into consideration which are
too wide).

Menu: on devices less than 800px wide, the menu collapses into a
"hamburger" menu. Therefore, small changes in the sidebar markup are
necessary.

page border: has been changed from the outdated "rounded corners"
look and shadow to a more "flat" design.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 
-<meta name="viewport" content="width=700, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta charset="utf-8" />
 <title>Grazer Linuxtage 2018</title>
 
@@ -74,33 +74,26 @@ Grazer Linuxtage 2018
 
 </section>
 
-
-
 <aside class="sidebar">
-<ul>
+
+<div class="menu-container">
+<!-- Checkbox -->
+<input id="menu-toggle" type="checkbox" />
+
+<!-- Hamburger -->
+<label for="menu-toggle">
+  <span></span>
+  <span></span>
+  <span></span>
+</label>
+
+
+<ul class="menu">
 <li><span class="selflink">Home</span></li>
-</ul>
 
-
-
-
-
-
-
-
-
-
-
-<ul>
 <li><a href="./sponsoren/">Sponsoren</a></li>
 <li><a href="./pressematerial/">Pressematerial</a></li>
-</ul>
 
-
-
-
-
-<ul>
 <li><a href="./lpi/">LPI-Prüfungen</a></li>
 <li><a href="./anfahrt/">Anfahrt / Karte</a></li>
 <li><a href="./newsletter/">Newsletter</a></li>
@@ -129,9 +122,11 @@ Grazer Linuxtage 2018
 
 <p><span class="selflink">&nbsp;</span></p>
 
+
+
+</div>
+
 </aside>
-
-
 
 <div id="pagebody">
 
